refactor: reformat code for readability and maintainability + Logger and Lang changes (ported from FootCube)